--- a/app/src/main/res/layout/videoprop.xml
+++ b/app/src/main/res/layout/videoprop.xml
@@ -6,35 +6,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/closeButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="254dp"
+        tools:layout_editor_absoluteY="311dp" />
+
     <ImageView
         android:id="@+id/thumbNailView"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:contentDescription="@string/todo">
-        android:layout_width="match_parent"
-         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/videoDetails"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-1dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="34dp"
+        tools:layout_editor_absoluteY="38dp"
         tools:srcCompat="@tools:sample/avatars" />
-
 
     <TextView
         android:id="@+id/videoDetails"
-        android:layout_width="413dp"
-        android:layout_height="498dp"
-        app:layout_constraintTop_toBottomOf="@id/thumbNailView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="236dp" />
-
-    <Button
-        android:id="@+id/closebutton"
-
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="685dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="226dp"
+        tools:layout_editor_absoluteY="438dp" />
 </android.support.constraint.ConstraintLayout>
