--- a/app/src/main/res/layout/channellist.xml
+++ b/app/src/main/res/layout/channellist.xml
@@ -9,49 +9,62 @@ cardview:cardCornerRadius="2dp"
 cardview:cardElevation="3dp"
 cardview:cardUseCompatPadding="true">
 
-<RelativeLayout
-    android:id="@+id/ChannelRecView"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    <RelativeLayout
+        android:id="@+id/ChannelRecView"
+        android:layout_width="422dp"
+        android:layout_height="130dp">
 
-    <ImageView
-        android:id="@+id/channelthumbnail"
-        android:layout_width="98dp"
-        android:layout_height="97dp"
-        android:layout_alignEnd="@+id/channelName"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="291dp"
-        android:scaleType="centerCrop" />
+        <ImageView
+            android:id="@+id/channelthumbnail"
+            android:layout_width="98dp"
+            android:layout_height="97dp"
+            android:layout_alignEnd="@id/channel_description"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="0dp"
+            android:layout_marginEnd="291dp"
+            android:layout_marginBottom="33dp"
+            android:scaleType="centerCrop" />
 
-    <TextView
-        android:id="@+id/channelName"
-        android:layout_width="211dp"
-        android:layout_height="74dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginLeft="12dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="-8dp"
-        android:maxLines="3"
-        android:padding="8dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-        android:textColor="#444"
-        android:textSize="18dp"
-        android:textStyle="bold" />
+        <TextView
+            android:id="@+id/channelName"
+            android:layout_width="260dp"
+            android:layout_height="42dp"
+            android:layout_alignStart="@+id/channel_description"
+            android:layout_alignTop="@+id/channel_description"
+            android:layout_marginStart="-130dp"
+            android:layout_marginLeft="12dp"
+            android:layout_marginTop="88dp"
+            android:maxLines="3"
+            android:padding="8dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+            android:textColor="#444"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="147dp"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/channelName"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="53dp"
-        android:layout_marginEnd="11dp"
-        android:text="Unsubscribe" />
+        <Button
+            android:id="@+id/button"
+            android:layout_width="147dp"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/channel_description"
+            android:layout_alignBottom="@+id/channelName"
+            android:layout_alignParentTop="true"
+            android:layout_marginTop="83dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginBottom="0dp"
+            android:text="Unsubscribe" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/channel_description"
+            android:layout_width="280dp"
+            android:layout_height="89dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="128dp"
+            android:layout_marginTop="0dp"
+            android:autoLink="web|email"
+            android:textAlignment="gravity" />
+
+    </RelativeLayout>
 
 </android.support.v7.widget.CardView>
