--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,49 +6,56 @@
     android:layout_height="match_parent"
     android:gravity="top">
 
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/search_button"
+            android:layout_width="108dp"
+            android:layout_height="wrap_content"
+            android:text="Search" />
+
+        <RadioGroup
+            android:id="@+id/radio_search_type"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <RadioButton
+                android:id="@+id/radio_video"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="true"
+                android:text="videos" />
+
+            <RadioButton
+                android:id="@+id/radio_channel"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="channels" />
+
+        </RadioGroup>
+
+        <CheckBox
+            android:id="@+id/search_youtube"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="youtube" />
+
+        <CheckBox
+            android:id="@+id/search_bitchute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="bitchute" />
+    </LinearLayout>
+
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/search_text"
-        android:inputType="text"/>
-
-    <CheckBox
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/search_youtube"
-        android:text="search youtube"/>
-
-    <CheckBox
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/search_bitchute"
-        android:text="search bitchute"/>
-
-    <RadioGroup
-        android:id="@+id/radio_search_type"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RadioButton
-            android:id="@+id/radio_video"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="true"
-            android:text="videos" />
-
-        <RadioButton
-            android:id="@+id/radio_channel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="channels" />
-
-    </RadioGroup>
-
-    <Button
-        android:id="@+id/search_button"
-        android:layout_width="108dp"
-        android:layout_height="wrap_content"
-        android:text="Search" />
+        android:inputType="text" />
 
     <LinearLayout
         android:id="@+id/search_subfragment"
@@ -56,6 +63,9 @@
         android:layout_height="659dp"
         android:orientation="vertical"
         tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp"/>
+        tools:layout_editor_absoluteY="8dp" >
+
+    </LinearLayout>
+
 
 </LinearLayout>
