--- a/app/src/main/res/layout/videoprop.xml
+++ b/app/src/main/res/layout/videoprop.xml
@@ -30,7 +30,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <WebView
-        android:id="@+id/videoDetails"
+        android:id="@+id/channelDetails"
         android:layout_width="413dp"
         android:layout_height="440dp"
         android:layout_marginTop="8dp"
