--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,68 +6,81 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/load_youtube"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:text="load youtube subscriptions"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
-        android:layout_width="168dp"
-        android:layout_height="104dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.401"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2">
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="168dp"
+            android:layout_height="104dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp">
 
-        <RadioButton
-            android:id="@+id/use_vlc"
+            <RadioButton
+                android:id="@+id/use_vlc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="VLC" />
+
+            <RadioButton
+                android:id="@+id/use_webview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Webview" />
+
+            <RadioButton
+                android:id="@+id/use_default"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="System Default" />
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="401dp"
+            android:layout_height="102dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:autoLink="web"
+            android:text="Which video player to use. VLC is open source and ad free, and supports youtube backwards compatibility. it can be installed from the app store at
+ https://play.google.com/store/apps/details?id=org.videolan.vlc Other players that support network playback should work.
+webview is mildly functional." />
+
+        <Button
+            android:id="@+id/load_bitchute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="VLC" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="load bitchute subscriptions" />
 
-        <RadioButton
-            android:id="@+id/use_default"
+        <Button
+            android:id="@+id/load_youtube"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="System Default" />
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="load youtube subscriptions" />
 
-        <RadioButton
-            android:id="@+id/use_webview"
+        <TextView
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Webview" />
-    </RadioGroup>
+            android:layout_height="107dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            android:autoLink="web"
+            android:text="To import your Bitchute or Youtube channels click the appropriate button and logon. It should open a page showing a list of your subscriptions and start adding the channels and videos. You can close the window and start using [sic]" />
 
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="366dp"
-        android:layout_height="44dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="Which video player to use. VLC is required for youtube functionality."
-        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
-    <Button
-        android:id="@+id/load_bitchute"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        tools:layout_editor_absoluteX="78dp"
-        tools:layout_editor_absoluteY="225dp"
-        tools:text="load bitcte subscriptions" />
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
