--- a/app/src/main/res/layout/channelprop.xml
+++ b/app/src/main/res/layout/channelprop.xml
@@ -42,8 +42,8 @@
 
     <TextView
         android:id="@+id/channel_description"
-        android:layout_width="408dp"
-        android:layout_height="454dp"
+        android:layout_width="402dp"
+        android:layout_height="352dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
@@ -52,8 +52,10 @@
         android:text="TextView"
         app:layout_constraintBottom_toTopOf="@+id/subscribe_button"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.739"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/thumbNailView" />
+        app:layout_constraintTop_toBottomOf="@+id/thumbNailView"
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/channel_name"
