--- a/app/src/main/res/layout/channellist.xml
+++ b/app/src/main/res/layout/channellist.xml
@@ -28,13 +28,13 @@ cardview:cardUseCompatPadding="true">
 
         <TextView
             android:id="@+id/channelName"
-            android:layout_width="215dp"
+            android:layout_width="190dp"
             android:layout_height="wrap_content"
             android:layout_alignTop="@+id/channel_description"
-            android:layout_marginStart="7dp"
+            android:layout_marginStart="1dp"
             android:layout_marginLeft="12dp"
-            android:layout_marginTop="90dp"
-            android:layout_toEndOf="@+id/bitchuteIcon"
+            android:layout_marginTop="91dp"
+            android:layout_toEndOf="@+id/channelserviceicon"
             android:maxLines="3"
             android:padding="8dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
@@ -67,21 +67,7 @@ cardview:cardUseCompatPadding="true">
 
 
         <ImageView
-            android:id="@+id/yahooIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="33dp"
-            android:layout_alignBottom="@+id/bitchuteIcon"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="97dp"
-            android:layout_marginEnd="385dp"
-            android:layout_marginBottom="0dp"
-            android:elevation="200dp"
-            android:visibility="invisible"
-            cardview:srcCompat="@mipmap/playbutton" />
-
-        <ImageView
-            android:id="@+id/bitchuteIcon"
+            android:id="@+id/channelserviceicon"
             android:layout_width="37dp"
             android:layout_height="28dp"
             android:layout_alignParentStart="true"
@@ -89,8 +75,7 @@ cardview:cardUseCompatPadding="true">
             android:layout_marginStart="-1dp"
             android:layout_marginTop="102dp"
             android:elevation="200dp"
-            android:visibility="invisible"
-            cardview:srcCompat="@mipmap/bitchute_round" />
+            android:visibility="visible" />
 
 
 
