--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -8,35 +7,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="168dp"
-            android:layout_height="104dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp">
-
-            <RadioButton
-                android:id="@+id/use_vlc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="VLC" />
-
-            <RadioButton
-                android:id="@+id/use_webview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Webview" />
-
-            <RadioButton
-                android:id="@+id/use_default"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="System Default" />
-        </RadioGroup>
 
         <TextView
             android:id="@+id/textView2"
@@ -50,6 +20,84 @@
  https://play.google.com/store/apps/details?id=org.videolan.vlc Other players that support network playback should work as straight Bitchute clients.
 webview is mildly functional." />
 
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="37dp"
+            android:text="Youtube settings" />
+
+        <RadioGroup
+            android:id="@+id/youtubeplayerradioGroup"
+            android:layout_width="199dp"
+            android:layout_height="112dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp">
+
+            <RadioButton
+                android:id="@+id/youtubeuse_vlc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="VLC" />
+
+            <RadioButton
+                android:id="@+id/youtubeuse_webview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Webview" />
+
+            <RadioButton
+                android:id="@+id/youtubeuse_default"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="System Default" />
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/load_youtube"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:text="load youtube subscriptions" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:text="Bitchute settings" />
+
+        <RadioGroup
+            android:id="@+id/bitchuteplayerradioGroup"
+            android:layout_width="168dp"
+            android:layout_height="104dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp">
+
+            <RadioButton
+                android:id="@+id/bitchuteuse_vlc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="VLC" />
+
+            <RadioButton
+                android:id="@+id/bitchuteuse_webview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Webview" />
+
+            <RadioButton
+                android:id="@+id/bitchuteuse_default"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="System Default" />
+        </RadioGroup>
+
         <Button
             android:id="@+id/load_bitchute"
             android:layout_width="wrap_content"
@@ -59,14 +107,6 @@ webview is mildly functional." />
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="load bitchute subscriptions" />
-
-        <Button
-            android:id="@+id/load_youtube"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="load youtube subscriptions" />
 
         <TextView
             android:id="@+id/textView3"
