--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -8,7 +8,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="679dp"
         tools:layout_editor_absoluteX="-67dp"
         tools:layout_editor_absoluteY="270dp" />
 
