--- a/app/src/main/res/layout/videoprop.xml
+++ b/app/src/main/res/layout/videoprop.xml
@@ -33,11 +33,13 @@
         android:id="@+id/channelDetails"
         android:layout_width="413dp"
         android:layout_height="440dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/closeButton"
-        app:layout_constraintTop_toBottomOf="@+id/thumbNailView"
-        tools:layout_editor_absoluteX="-1dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/thumbNailView" />
 
 
 
