cleaned up layout issues, fixed lint warnings, improved import process and fixed duplicate channel checking.

--- a/app/src/main/res/layout/fragment_channel.xml
+++ b/app/src/main/res/layout/fragment_channel.xml
@@ -8,7 +8,9 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/crv"
         android:layout_width="match_parent"
-        android:layout_height="679dp"
+        android:layout_height="658dp"
+        android:paddingTop="22dp"
+        android:paddingBottom="20dp"
         tools:layout_editor_absoluteX="-67dp"
         tools:layout_editor_absoluteY="270dp" />
 
