--- a/app/src/main/res/layout/channelprop.xml
+++ b/app/src/main/res/layout/channelprop.xml
@@ -45,7 +45,7 @@
         android:layout_width="402dp"
         android:layout_height="352dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="8dp"
         android:autoLink="web|email"
@@ -63,9 +63,11 @@
         android:id="@+id/channel_name"
         android:layout_width="390dp"
         android:layout_height="41dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
-        android:textSize="18sp"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/thumbNailView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
