--- a/app/src/main/res/layout/videoprop.xml
+++ b/app/src/main/res/layout/videoprop.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,36 +10,71 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="172dp"
         android:layout_marginBottom="12dp"
         android:text="Close"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.891"
-        app:layout_constraintStart_toEndOf="@+id/subscribe_button" />
+        app:layout_constraintStart_toEndOf="@+id/subscribe_button"
+        app:layout_constraintTop_toBottomOf="@+id/channelDetails" />
 
     <ImageView
         android:id="@+id/thumbNailView"
-        android:layout_width="405dp"
-        android:layout_height="213dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="416dp"
+        android:layout_height="194dp"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:paddingTop="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/videoproptitle"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.729"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
 
-    <WebView
+    <TextView
         android:id="@+id/channelDetails"
-        android:layout_width="413dp"
-        android:layout_height="440dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="405dp"
+        android:layout_height="398dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="24dp"
         android:layout_marginBottom="8dp"
+        android:autoLink="web|email"
+        android:autoText="false"
+        android:clipToPadding="true"
+        android:paddingLeft="30dp"
+        android:paddingTop="16dp"
+        android:paddingRight="24dp"
         app:layout_constraintBottom_toTopOf="@+id/closeButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/videoproptitle" />
+
+    <TextView
+        android:id="@+id/videoproptitle"
+        android:layout_width="398dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
+        android:paddingLeft="24dp"
+        android:paddingRight="24dp"
+        android:text="TextView"
+        android:textAlignment="textStart"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/channelDetails"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/thumbNailView" />
-
 
 
 </android.support.constraint.ConstraintLayout>
