fixed using different default player options

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -10,16 +10,15 @@
 
         <TextView
             android:id="@+id/textView2"
-            android:layout_width="401dp"
-            android:layout_height="133dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:autoLink="web"
             android:paddingTop="16dp"
             android:text="Which video player to use. VLC is open source and ad free, and supports youtube backwards compatibility. it can be installed from the app store at
- https://play.google.com/store/apps/details?id=org.videolan.vlc Other players that support network playback should work as straight Bitchute clients.
-webview is mildly functional." />
+ https://play.google.com/store/apps/details?id=org.videolan.vlc Most players should work for Bitchute. Webview is mildly functional." />
 
         <TextView
             android:id="@+id/textView5"
