--- a/app/src/main/res/layout/videoprop.xml
+++ b/app/src/main/res/layout/videoprop.xml
@@ -66,9 +66,9 @@
         android:layout_marginBottom="4dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
-        android:text="TextView"
-        android:textAlignment="textStart"
-        android:textSize="18sp"
+        android:text="Sharing Is Caring"
+        android:textAlignment="center"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/channelDetails"
         app:layout_constraintEnd_toEndOf="parent"
